# webnetlab

./: .gitignore  README.md  pyproject.toml
scenarios/arista-mlag/: arista-mlag.clab.yml  lab_specification.yml
scenarios/arista-mlag/ini_cfg/: mlag1.cfg  mlag2.cfg  solo1.cfg  solo2.cfg
scenarios/arista-ospf/: .arista-mlag.clab.yml.bak  arista-ospf.clab.yml  lab_specification.yml
scenarios/arista-ospf/ini_cfg/: R1.cfg  R2.cfg  R3.cfg  R4.cfg
webnetlab/: .env.example  app.py  settings.py
webnetlab/api/: dependencies.py
webnetlab/api/functions/: __init__.py  graph.py  lab.py
webnetlab/api/v1/: auth.py  graph.py  lab.py  users.py
webnetlab/core/: settings.py
webnetlab/core/auth/: __init__.py  auth.py
webnetlab/core/crud/: __init__.py  user.py
webnetlab/core/db/: declarative_base.py  session.py
webnetlab/core/models/: user.py
webnetlab/core/schemas/: user.py
webnetlab/core/static/css/: style_form.css
webnetlab/core/static/js/: current_user.js  deploy.js  destroy.js  graph.js  lab_controls.js
webnetlab/core/templates/: base.html  list_labs.html  login.html  open_lab.html  signup.html
webnetlab/core/templates/errors/: 401.html  404.html  500.html
webnetlab/core/views/: auth_login.py  auth_signup.py  lab_list.py  lab_screen.py
webnetlab/migration/: env.py
webnetlab/migration/versions/: 03ba2956af0e_initial.py
webnetlab/static/js/: check_status.js  deploy.js
webnetlab/templates/: base.html  lab_list.html  list_labs.html  open_lab.html
webnetlab/views/: lab_list.py  lab_screen.py
