[tool.poetry]
name = "webnetlab"
version = "0.1.0"
description = "Network labs with web-interface using containerized NOSes"
authors = ["Grigoriy Macheev <gmacheev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
